# SGTD-API

./: .breakpoints  .replit  LICENSE  README.md  __init__.py  app (Gsheet).py  app.py  application.py  auth.py  database.py  database_table.py  db_GNSS.py  db_Vessel_data_pull.py  db_Vessel_map.py  db_table_pull.py  db_table_view_request.py  main.py  package_API_SGTD.py  pyproject.toml  requirements.txt  swagger.json
.ebextensions/: 01_packages.config
Back End/templates/: Banner table.html  Banner.html  vessel_request.html
Backend/: db_table_pull.py
sgtd-web/: package-lock.json  package.json
sgtd-web/src/: App.tsx
sgtd-web/src/components/: Button.tsx  FormController.tsx  Input.tsx  Layout.tsx  Popup.tsx
sgtd-web/src/hooks/: useMakeGetRequest.tsx  useMakePostRequest.tsx
sgtd-web/src/lib/: constants.ts  dummyData.ts
sgtd-web/src/pages/: Login.tsx  Register.tsx  TableView.tsx  TriangularModule.tsx  VesselETA.tsx  VesselQuery.tsx
sgtd-web/src/styles/: colors.ts  global.tsx
static/css/: register.css  style.css
templates/: Banner Vessel Map.html  Banner table - ori.html  Banner table.html  Banner.html  GNSS_request.html  SG_anchorages.geojson  UCC_upload.html  base.html  login.html  mymap.html  register.html  table_view.html  vessel_request (Gsheet).html  vessel_request.html
