[tool.poetry]
name = "repl_nix_SGTD-API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
Flask = "^2.3.3"
pygsheets = "^2.0.6"
pandas = "^2.0.3"
leafmap = "0.23.3"
geopandas = "0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
